--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,6 +15,10 @@ spring:
 
 
   flyway:
+    placeholders:
+      admin.password: ${SEED_PASSWORD_ADMIN_MUSIC}
+      admin.email: ${SEED_EMAIL_ADMIN_MUSIC}
+
     enabled: true
     baseline-on-migrate: true
     locations: classpath:db/migration
