--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -24,6 +24,8 @@ spring:
     locations: classpath:db/migration
     schemas: public
 
-
   server:
     port: ${APP_PORT_MUSIC}
+  api:
+    jwt:
+      secret: ${JWT_SECRET_MUSIC}
