feat: add expiration token

--- a/.env.exemplo
+++ b/.env.exemplo
@@ -13,6 +13,8 @@ SHOW_SQL_MUSIC=
 APP_PORT_MUSIC=
 
 JWT_SECRET_MUSIC=
-JWT_EXPIRATION_MUSIC=
+JWT_EXPIRATION_MUSIC=300000
 
 SEED_PASSWORD_ADMIN_MUSIC=
+
+CORS_ALLOWED_ORIGINS=localhost:3000
