--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,9 @@ services:
 #
 #      JWT_SECRET_MUSIC: ${JWT_SECRET_MUSIC}
 #      JWT_EXPIRATION_MUSIC: ${JWT_EXPIRATION_MUSIC}
-#       SEED_PASSWORD_ADMIN_MUSIC: ${SEED_PASSWORD_ADMIN_MUSIC}
-#        SEED_EMAIL_ADMIN_MUSIC: ${SEED_EMAIL_ADMIN_MUSIC}
+#     SEED_PASSWORD_ADMIN_MUSIC: ${SEED_PASSWORD_ADMIN_MUSIC}
+#     SEED_EMAIL_ADMIN_MUSIC: ${SEED_EMAIL_ADMIN_MUSIC}
+#     CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS}
 #    networks:
 #      - network-app-music
   postgres:
