--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -29,3 +29,8 @@ spring:
   api:
     jwt:
       secret: ${JWT_SECRET_MUSIC}
+      expiration: ${JWT_EXPIRATION_MUSIC}
+  app:
+    cors:
+      allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000}
+
