feat: implements refresh token

--- a/.env.exemplo
+++ b/.env.exemplo
@@ -14,6 +14,9 @@ APP_PORT_MUSIC=
 
 JWT_SECRET_MUSIC=
 JWT_EXPIRATION_MUSIC=300000
+JWT_REFRESH_EXPIRATION_MUSIC=500000
+COOKIES_SECURE_MUSIC=
+SAME_SITE_MUSIC=None
 
 SEED_PASSWORD_ADMIN_MUSIC=
 
