--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,9 +25,13 @@ services:
 #
 #      JWT_SECRET_MUSIC: ${JWT_SECRET_MUSIC}
 #      JWT_EXPIRATION_MUSIC: ${JWT_EXPIRATION_MUSIC}
+#      JWT_REFRESH_EXPIRATION_MUSIC= ${JWT_REFRESH_EXPIRATION_MUSIC}
 #     SEED_PASSWORD_ADMIN_MUSIC: ${SEED_PASSWORD_ADMIN_MUSIC}
 #     SEED_EMAIL_ADMIN_MUSIC: ${SEED_EMAIL_ADMIN_MUSIC}
 #     CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS}
+#      JWT_REFRESH_EXPIRATION_MUSIC=500000
+#      COOKIES_SECURE_MUSIC=true
+#      SAME_SITE_MUSIC=None
 #    networks:
 #      - network-app-music
   postgres:
