--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -30,6 +30,9 @@ spring:
     jwt:
       secret: ${JWT_SECRET_MUSIC}
       expiration: ${JWT_EXPIRATION_MUSIC}
+      refresh-expiration: ${JWT_REFRESH_EXPIRATION_MUSIC}
+      secure: ${COOKIES_SECURE_MUSIC}
+      same-site: ${SAME_SITE_MUSIC}
   app:
     cors:
       allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000}
