--- a/.env.exemplo
+++ b/.env.exemplo
@@ -21,3 +21,8 @@ SAME_SITE_MUSIC=None
 SEED_PASSWORD_ADMIN_MUSIC=
 
 CORS_ALLOWED_ORIGINS=localhost:3000
+
+MINIO_HOST_URL=http://localhost:9000
+MINIO_ROOT_USER=minioadmin
+MINIO_ROOT_PASSWORD=minioadmin
+MINIO_BUCKET=album-images
