--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,11 @@
 			<version>0.12.7</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.minio</groupId>
+			<artifactId>minio</artifactId>
+			<version>8.5.7</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
