--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -36,4 +36,8 @@ spring:
   app:
     cors:
       allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000}
-
+minio:
+  url: ${MINIO_HOST_URL}
+  access-key: ${MINIO_ROOT_USER}
+  secret-key: ${MINIO_ROOT_PASSWORD}
+  bucket: ${MINIO_BUCKET}
