--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,12 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.bucket4j</groupId>
+			<artifactId>bucket4j-core</artifactId>
+			<version>8.7.0</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
